# UAF-Repo

./: .gitignore  README.md  pyproject.toml  uaf_to_neo4j.ipynb
.claude/: settings.local.json
.github/ISSUE_TEMPLATE/: bug_report.md  enchancement.md  feature_request.md
.github/workflows/: packaging.yml  triage.yml  uaf-neo4j-build.yml  uaf-neo4j-plugin-build.yml
Driver/: neo4j_GraphDriver.ipynb
Test/: conftest.py  test_mcp_server.py  test_neo4j_connection.py
UAF_to_NEO4J/input/: AS-IS S&OPE LDM to Process Analysis.csv
UAF_to_NEO4J/output/: nodes.csv
claude_desktop_config/: claude_desktop_config.json
docker-compose/: docker-compose.yml
neo4j_mcp_driver/: server.py
neo4j_mcp_driver.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
output/: relationships.csv
poc_UAF_to_Neo4j/: uaf_to_neo4j.ipynb
poc_UAF_to_Neo4j/input/: AS-IS S&OPE LDM to Process Analysis.csv  relationships.csv
poc_UAF_to_Neo4j/output/: relationships.csv
uaf-neo4j-plugin/: README.md  install-msosa-jars.ps1  pom.xml
uaf-neo4j-plugin/cypher/: init_uaf_graph.cypher  query-cookbook.cypher
uaf-neo4j-plugin/src/assembly/: plugin-zip.xml
uaf-neo4j-plugin/src/main/java/com/uaf/neo4j/plugin/: AboutAction.java  ConfigureAction.java  ExportAction.java  ExportLog.java  UAFExporterActionsConfigurator.java  UAFNeo4jPlugin.java
uaf-neo4j-plugin/src/main/java/com/uaf/neo4j/plugin/model/: UAFElementDTO.java  UAFModelTraverser.java  UAFRelationshipDTO.java  UAFStereotypeRegistry.java  UAFStereotypeRegistry.java.tmp.31776.1102a2229238
(+11 files in other folders)
